--- a/Makestagram-Swift-Solution-StarterProject/Makestagram/Base.lproj/Main.storyboard
+++ b/Makestagram-Swift-Solution-StarterProject/Makestagram/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZC8-O9-hhU">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Friend Search View Controller-->
@@ -58,22 +59,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="320" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EAd-SW-RDj">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="470" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EAd-SW-RDj">
                                 <rect key="frame" x="0.0" y="20" width="600" height="531"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="320" id="jb7-u1-Ue4" customClass="PostTableViewCell" customModule="Makestagram" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="470" id="jb7-u1-Ue4" customClass="PostTableViewCell" customModule="Makestagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jb7-u1-Ue4" id="T7F-Hj-wE8">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ice-Dg-G67">
-                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="319.5"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ice-Dg-G67">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="344"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="344" id="Wdt-Tg-hMA"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAO-QD-4F7">
+                                                    <rect key="frame" x="544" y="401" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="cOP-Yg-chR"/>
+                                                        <constraint firstAttribute="width" constant="44" id="x9h-oQ-yco"/>
+                                                    </constraints>
+                                                    <inset key="contentEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
+                                                    <state key="normal" image="Heart">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <state key="selected" image="Heart-selected"/>
+                                                    <connections>
+                                                        <action selector="likeButtonTapped:" destination="jb7-u1-Ue4" eventType="touchUpInside" id="iHa-3o-gen"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkq-q6-h9O">
+                                                    <rect key="frame" x="18" y="417" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="WNz-dE-GA5"/>
+                                                        <constraint firstAttribute="height" constant="44" id="fab-Vp-8GS"/>
+                                                    </constraints>
+                                                    <state key="normal" image="More">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="moreButtonTapped:" destination="jb7-u1-Ue4" eventType="touchUpInside" id="Z90-AS-xKb"/>
+                                                    </connections>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Heart" translatesAutoresizingMaskIntoConstraints="NO" id="xMZ-Wj-8eu">
+                                                    <rect key="frame" x="20" y="377" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="XeV-cm-gCm"/>
+                                                        <constraint firstAttribute="width" constant="20" id="sbS-Jc-EdV"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Test User" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YZH-34-4CN">
+                                                    <rect key="frame" x="60" y="377" width="482" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="klO-os-bRR"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                    <color key="textColor" red="0.58823529411764708" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ice-Dg-G67" firstAttribute="leading" secondItem="T7F-Hj-wE8" secondAttribute="leading" id="04T-r2-Man"/>
+                                                <constraint firstItem="ice-Dg-G67" firstAttribute="top" secondItem="T7F-Hj-wE8" secondAttribute="top" id="4eA-FZ-Vae"/>
+                                                <constraint firstAttribute="trailing" secondItem="ice-Dg-G67" secondAttribute="trailing" id="9dR-W6-w4x"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="YZH-34-4CN" secondAttribute="trailing" constant="50" id="MbI-MS-pFZ"/>
+                                                <constraint firstItem="bkq-q6-h9O" firstAttribute="top" secondItem="YZH-34-4CN" secondAttribute="bottom" constant="20" id="PFB-1F-GG8"/>
+                                                <constraint firstItem="bkq-q6-h9O" firstAttribute="leading" secondItem="T7F-Hj-wE8" secondAttribute="leadingMargin" constant="10" id="aXW-iv-efc"/>
+                                                <constraint firstItem="YZH-34-4CN" firstAttribute="leading" secondItem="xMZ-Wj-8eu" secondAttribute="trailing" constant="20" id="b1e-P5-Uje"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="bkq-q6-h9O" secondAttribute="bottom" id="f1r-1w-suu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="QAO-QD-4F7" secondAttribute="trailing" constant="4" id="nYo-pk-bVX"/>
+                                                <constraint firstItem="xMZ-Wj-8eu" firstAttribute="leading" secondItem="T7F-Hj-wE8" secondAttribute="leadingMargin" constant="12" id="vYx-pe-Umu"/>
+                                                <constraint firstItem="bkq-q6-h9O" firstAttribute="top" secondItem="xMZ-Wj-8eu" secondAttribute="bottom" constant="20" id="vaw-Kb-vmR"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="QAO-QD-4F7" secondAttribute="bottom" constant="16" id="zLH-Cy-IeL"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="likeButton" destination="QAO-QD-4F7" id="g95-WQ-kF2"/>
+                                            <outlet property="likesIconImageView" destination="xMZ-Wj-8eu" id="X3A-Gj-GBf"/>
+                                            <outlet property="likesLabel" destination="YZH-34-4CN" id="jcz-VT-z68"/>
+                                            <outlet property="moreButton" destination="bkq-q6-h9O" id="cfU-m9-atB"/>
                                             <outlet property="postImageView" destination="ice-Dg-G67" id="UaQ-kW-Lq6"/>
                                         </connections>
                                     </tableViewCell>
@@ -125,7 +191,10 @@
     </scenes>
     <resources>
         <image name="Camera" width="40" height="30"/>
+        <image name="Heart" width="72" height="68"/>
+        <image name="Heart-selected" width="72" height="68"/>
         <image name="Home" width="38" height="36"/>
+        <image name="More" width="26" height="17"/>
         <image name="People" width="42" height="42"/>
     </resources>
 </document>
